--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel -d ./build ./src -s",
-    "build": "npm run clean && npm run build-babel",
-    "start2": "npm run build && node ./build/index.js"
+    "build": "npm run clean && npm run build-babel"
   },
-  "keywords": ["react"],
+  "keywords": [
+    "react"
+  ],
   "author": "johnny",
   "license": "MIT",
   "dependencies": {
