--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Course Player built with React and Socket.IO",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all --parallel open:src lint:watch",
+    "start": "npm run open:src",
+    "dev": "npm-run-all --parallel open:src lint:watch",
     "open:src": "babel-node tools/server.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
@@ -13,14 +14,13 @@
     "build-babel": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run build-babel"
   },
-  "keywords": [
-    "react"
-  ],
+  "keywords": ["react"],
   "author": "johnny",
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.2",
+    "npm-run-all": "^4.1.3",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
