--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "build": "npm run clean && npm run build-babel"
   },
   "keywords": ["react"],
-  "author": "johnny",
+  "author": {
+    "name": "Rong Zhuang",
+    "email": "jojozhuang@gmail.com"
+  },
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
