--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "webpack": "^3.10.0",
     "webpack-dev-middleware": "^2.0.1",
     "webpack-hot-middleware": "^2.21.0"
+  },
+  "engines": {
+    "node": "~0.10.0 || ~0.12.0 || ~4.2.0"
   }
 }
