--- a/web.config
+++ b/web.config
@@ -3,7 +3,7 @@
 
         <handlers>
             <!-- indicates that the app.js file is a node.js application to be handled by the iisnode module -->
-            <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+            <add name="iisnode" path="tools\server.js" verb="*" modules="iisnode" />
         </handlers>
 
         <rewrite>
