--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Course Player built with React and Socket.IO",
   "main": "index.js",
   "scripts": {
-    "start": "npm run open:src",
+    "start": "NODE_ENV=development npm run open:src",
     "dev": "npm-run-all --parallel open:src lint:watch",
     "open:src": "babel-node tools/server.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
@@ -12,7 +12,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel -d ./build ./src -s",
-    "build": "npm run clean && npm run build-babel"
+    "build": "npm run clean && npm run build-babel",
+    "compile": "./node_modules/.bin/babel ./src -d ./compiled",
+    "build2":
+      "NODE_ENV=production webpack --env production --config ./webpack.config.prod.js"
   },
   "keywords": ["react"],
   "author": {
@@ -24,29 +27,31 @@
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.2",
     "npm-run-all": "^4.1.3",
-    "react": "^16.2.0",
+    "react": "^16.4.2",
     "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.4.2",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "styled-components": "^2.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
-    "eslint": "^4.13.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-react": "^7.5.1",
-    "eslint-watch": "^3.1.3",
+    "clean-webpack-plugin": "^0.1.19",
+    "eslint": "^4.19.1",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-react": "^7.10.0",
+    "eslint-watch": "^3.1.5",
     "eventsource-polyfill": "^0.9.6",
-    "open": "0.0.5",
-    "serve-favicon": "^2.4.5",
-    "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^2.0.1",
-    "webpack-hot-middleware": "^2.21.0"
+    "html-webpack-plugin": "^3.2.0",
+    "serve-favicon": "^2.5.0",
+    "webpack": "^4.16.4",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.3"
   },
   "engines": {
     "node": "~0.10.0 || ~0.12.0 || ~4.2.0"
