--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "webpack-cli": "^4.7.2",
     "webpack-dev-middleware": "^5.0.0",
     "webpack-hot-middleware": "^2.25.0"
+  },
+  "engines": {
+    "node": "~0.10.0 || ~0.12.0 || ~9.4.0"
   }
 }
