--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "engines": {
-    "node": "~0.10.0 || ~0.12.0 || ~9.4.0"
+    "node": ">=10.0.0 <15.0.0",
+    "npm": "~6.0.20"
   }
 }
