--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "engines": {
-    "node": ">=10.0.0 <15.0.0",
-    "npm": "~6.0.0"
+    "node": "14.16.1",
+    "npm": "6.14.12"
   }
 }
