--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "react-dom": "^16.14.0",
     "socket.io": "^2.4.1",
     "socket.io-client": "^2.4.0",
-    "styled-components": "^5.3.0"
-  },
-  "devDependencies": {
+    "styled-components": "^5.3.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
@@ -56,6 +54,9 @@
     "webpack-cli": "^4.7.2",
     "webpack-dev-middleware": "^5.0.0",
     "webpack-hot-middleware": "^2.25.0"
+  },
+  "devDependencies": {
+
   },
   "engines": {
     "node": "14.16.1",
