--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,3 @@
 {
-  "presets": ["react", "es2015"],
-  "env": {
-    "development": {
-      "presets": ["react-hmre"]
-    },
-    "production": {
-      "presets": ["react", "es2015"]
-    }
-  }
+  "presets": ["@babel/preset-env", "@babel/preset-react"]
 }
