--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "express": "^4.17.1",
+    "glob-parent": "^6.0.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.14.0",
     "react-bootstrap": "^0.31.5",
@@ -36,10 +37,11 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.1.6",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
     "babel-preset-react-hmre": "^1.1.1",
     "braces": ">=2.3.1",
     "clean-webpack-plugin": "^0.1.19",
